added base styles

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,18 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Oleksandr Shchipkov" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Poppins:wght@400;500;600&display=swap"
+    />
     <title>Oleksandr Shchipkov</title>
   </head>
   <body>
